# homeworkpal

./: .env.template  .gitignore  CLAUDE.md  PDF_TEXT_OPTIMIZATION_GUIDE.md  PROJECT_STRUCTURE.md  RAG_STATUS_REPORT.md  README.md  README_SIMPLE.md  URL_GUIDE.md  alembic.ini  app.py  claude-progress.txt  feature_list.json  fix_csv_structure.py  ingest_textbooks.py  init.sh  init_database.py  main.py  manual_fix_csv.py  pyproject.toml  run_simple_api.py  start_simple.sh  test_complete.sh  test_simple.sh  test_simple_pdf.py  update_database.py  verify_environment.py
.claude/: README.md
.claude/agents/: rag初始化代理.md  rag测试代理.md  编码代理.md
.claude/commands/: rag功能验证.md  rag回滚恢复.md  rag开发会话.md  rag文档管理.md  rag状态报告.md  项目初始化.md
.claude/skills/rag-browser-flow/: SKILL.md
.claude/skills/rag-commit-helper/: SKILL.md
.claude/skills/rag-e2e-smoke/: SKILL.md
.claude/skills/rag-feature-governor/: SKILL.md
.claude/skills/rag-git-ops/: SKILL.md
.claude/skills/rag-init-script-runner/: SKILL.md
.claude/skills/rag-progress-logger/: SKILL.md
.claude/skills/rag-rollback/: SKILL.md
alembic/: env.py
alembic/versions/: cc09f62012cb_initial_baseline_migration_for_rag_.py
archive/: app_simple.py  main_simple.py
docs/: 作业搭子产品文档.md  开发任务分拆.md  日志管理.md  环境配置指南.md  项目结构.md
exports/: 语文三上_content.csv  语文三上_content_cleaned.csv  语文三上_content_fixed copy.csv  语文三上_content_refined.csv  语文三上_content_summary.txt
homeworkpal/: __init__.py
homeworkpal/api/: main.py
homeworkpal/core/: config.py
homeworkpal/database/: connection.py  models.py
homeworkpal/document/: __init__.py  chinese_text_processor.py  chinese_textbook_analyzer.py  pdf_processor.py  text_splitter.py
homeworkpal/frontend/: app.py
homeworkpal/llm/: __init__.py  base.py  siliconflow.py
homeworkpal/rag/: __init__.py  qa_service.py  rag_service.py
homeworkpal/simple/: api.py  app.py
homeworkpal/utils/: logger.py
playground/: test_qa_educational.py  test_rag_api.py  test_rag_educational.py  test_rag_service.py
playroom/: README.md  demo_usage.py  ingest_textbooks_simple.py  manual_test_guide.md  simple_text_splitter.py  test_basic_pdf.py  test_browser_qa.py  test_chinese_textbook_search.py  test_frontend_qa.py  test_pdf_direct.py  test_pdf_processing.py  test_rag_search.py  test_real_pdf_processing.py  verify_chinese_metadata.py
scripts/: start_services.sh  test_complete.sh  test_environment.py
src/homeworkpal/database/: __init__.py  models.py
tests/: test_qa_service.py  test_rag_service.py
textbook_processing/: README.md  USAGE.md  __init__.py  run_textbook_processing.py
textbook_processing/export/: export_textbook_to_csv.py
textbook_processing/ingestion/: import_chinese_textbook.py  ingest_textbooks.py  ingest_textbooks_enhanced.py  ingest_textbooks_structured.py
textbook_processing/pdf_processing/: process_chinese_textbook.py
textbook_processing/scripts/: chinese_textbook_vectorize.py  clean_csv_refinement.py  clean_csv_simple.py  clear_database.py
textbook_processing/tests/: test_chinese_search.py  test_chinese_vectorize.py  test_rag_search.py  test_rag_simple.py
