[project]
name = "homeworkpal"
version = "0.1.0"
description = "AI-powered homework assistant for 3rd grade students using PEP textbooks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core web framework
    "chainlit>=1.1.0",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    # Database and vector storage
    "psycopg2-binary>=2.9.8",
    "pgvector>=0.2.4",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    # LangChain ecosystem
    "langchain>=0.0.350",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.8",
    "langchain-experimental>=0.0.48",
    # LLM providers (Chinese models)
    "openai>=1.3.8",
    "dashscope>=1.17.0", # Aliyun (Qwen)
    # Document processing
    "unstructured[pdf]>=0.11.6",
    "pypdf>=3.17.0",
    "python-multipart>=0.0.6",
    "pillow>=10.1.0",
    # Text processing and embeddings
    "sentence-transformers>=2.2.2",
    "jieba>=0.42.1",
    "openpyxl>=3.1.2",
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.2",
    "aiofiles>=23.2.1",
    # Testing and quality
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "asyncpg>=0.31.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "W", "I", "N", "B", "C90", "UP"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/homeworkpal"]
include = [
    "src/**/*.py",
    "app.py",
    "main.py"
]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.27.1",
]
